# advent2023

./: CMakeLists.txt
advent2023/: CMakeLists.txt  advent2023.c  advent2023.h
day01/: CMakeLists.txt  pt1.c  pt2.c
day02/: CMakeLists.txt  pt1.c  pt2.c
day02/day03/: CMakeLists.txt  pt1.c  pt2.c
day03/: CMakeLists.txt  pt1.c  pt2.c
include/: advent2023.h
